fdo#68724: sw: fix crash on Insert->File with Hybrid PDF

This is an unfortunate combination of 2 special cases:
- the Hybrid PDF has its own XFilter implementation to extract the
  embedded ODF document
- Writer needs to create a SwReader with SwPaM for Insert

Since the PDF XFilter uses a special service in sfx2 to implement
the import, handling this requires a new method in SfxObjectShell
that calls back into Writer to create the properly setup SwReader.

Change-Id: Ie85f3bfa322bfe883c479e1cb198a8bf0cbbac23