sw/inc/docsh.hxx
@@ -93,6 +93,9 @@ class SW_DLLPUBLIC SwDocShell: public SfxObjectShell, public SfxListener
 
     SW_DLLPRIVATE virtual sal_uInt16            PrepareClose( sal_Bool bUI = sal_True, sal_Bool bForBrowsing = sal_False );
 
+    SW_DLLPRIVATE virtual bool     InsertGeneratedStream(SfxMedium& rMedium,
+            css::uno::Reference<css::text::XTextRange> const& xInsertPosition)
+        SAL_OVERRIDE;
 
     /// Make DocInfo known to the Doc.
     SW_DLLPRIVATE virtual SfxDocumentInfoDialog* CreateDocumentInfoDialog(
